Name:               salvia
Version:            0.3.0
Description:        Lightweight Haskell Web Server Framework with modular
                    support for serving static files, directories indices,
                    default error responses, connection counting and logging,
                    HEAD and PUT requests, keep-alives, custom banner printing,
                    default handler environments for parsing request and
                    printing responses, dispatching based on request methods,
                    URI, paths and filename extension, URI rewriting and
                    redirection, virtual hosting, cookie, session and user
                    management and more...
                    
Synopsis:           Lightweight Haskell Web Server Framework 
Cabal-version:      >= 1.6
Category:           Network, Web
License:            BSD3
License-file:       LICENSE
Author:             Sebastiaan Visser
Maintainer:         sfvisser@cs.uu.nl
Build-Type:         Simple

Library
  GHC-Options:      -threaded -Wall -fno-warn-orphans
  HS-Source-Dirs:   src

  Build-Depends:    base ==4.*,
                    bimap,
                    bytestring,
                    containers,
                    directory,
                    encoding,
                    fclabels,
                    monads-fd,
                    network,
                    old-locale,
                    process,
                    threadmanager,
                    pureMD5,
                    random,
                    safe,
                    stm,
                    time,
                    transformers,
                    utf8-string,
                    salvia-protocol,
                    split,
                    text

  Exposed-modules:  Network.Salvia
                    Network.Salvia.Core.Aspects
                    Network.Salvia.Core.Config
                    Network.Salvia.Core.Context
                    Network.Salvia.Impl.Handler
                    Network.Salvia.Impl.Client
                    Network.Salvia.Impl.Server
                    Network.Salvia.Handler.Banner
                    Network.Salvia.Handler.Body
                    Network.Salvia.Handler.CGI
                    Network.Salvia.Handler.Close
                    Network.Salvia.Handler.Client
                    Network.Salvia.Handler.Cookie
                    Network.Salvia.Handler.Directory
                    Network.Salvia.Handler.Dispatching
                    Network.Salvia.Handler.Environment
                    Network.Salvia.Handler.Error
                    Network.Salvia.Handler.Extension
                    Network.Salvia.Handler.File
                    Network.Salvia.Handler.FileSystem
                    Network.Salvia.Handler.Head
                    Network.Salvia.Handler.Log
                    Network.Salvia.Handler.Login
                    Network.Salvia.Handler.Method
                    Network.Salvia.Handler.Parser
                    Network.Salvia.Handler.Path
                    Network.Salvia.Handler.Printer
                    Network.Salvia.Handler.Proxy
                    Network.Salvia.Handler.Put
                    Network.Salvia.Handler.Redirect
                    Network.Salvia.Handler.Rewrite
                    Network.Salvia.Handler.Session
                    Network.Salvia.Handler.VirtualHosting
                    Network.Salvia.Handlers
                    Network.Salvia.Httpd

  Extensions:       FlexibleContexts
                    FlexibleInstances 
                    RankNTypes
                    ScopedTypeVariables
                    TypeOperators
                    MultiParamTypeClasses
                    GeneralizedNewtypeDeriving
                    FunctionalDependencies
                    TypeFamilies

-- Executable          salvia-demo
--   Executable:       salvia-demo
--   Main-is:          Demo.hs
--   GHC-Options:      -threaded -Wall -fno-warn-orphans
--   HS-Source-Dirs:   src 
--   Extensions:       FlexibleContexts
--                     FlexibleInstances 
--                     RankNTypes
--                     ScopedTypeVariables
--                     TypeOperators
--                     MultiParamTypeClasses
--                     GeneralizedNewtypeDeriving

