Name:               salvia
Version:            0.3.0
Description:        Lightweight Haskell Web Server Framework with modular
                    support for serving static files, directories indices,
                    default error responses, connection counting and logging,
                    HEAD and PUT requests, keep-alives, custom banner printing,
                    default handler environments for parsing request and
                    printing responses, dispatching based on request methods,
                    URI, paths and filename extension, URI rewriting and
                    redirection, virtual hosting, cookie, session and user
                    management and more...
                    
Synopsis:           Lightweight Haskell Web Server Framework 
Cabal-version:      >= 1.6
Category:           Network, Web
License:            BSD3
License-file:       LICENSE
Author:             Sebastiaan Visser
Maintainer:         sfvisser@cs.uu.nl
Build-Type:         Simple

Library
  GHC-Options:      -threaded -Wall -fno-warn-orphans
  HS-Source-Dirs:   src

  Build-Depends:    base ==4.*,
                    bytestring ==0.9.*,
                    containers ==0.3.*,
                    directory ==1.0.*,
                    fclabels ==0.4.*,
                    monads-fd ==0.0.*,
                    network >= 2.2.1.7 && < 2.3,
                    old-locale ==1.0.*,
                    process ==1.0.*,
                    threadmanager ==0.1.3,
                    pureMD5 ==1.0.*,
                    random ==1.0.*,
                    safe ==0.2.*,
                    stm ==2.1.*,
                    time ==1.1.*,
                    transformers ==0.1.*,
                    unix >= 2.3 && < 2.5,
                    utf8-string ==0.3.*,
                    salvia-protocol ==0.1.*,
                    split ==0.1.*,
                    text ==0.7.*

  Exposed-modules:  Network.Salvia
                    Network.Salvia.Interface
                    Network.Salvia.Handlers
                    Network.Salvia.Impl

                    Network.Salvia.Impl.Config
                    Network.Salvia.Impl.Context
                    Network.Salvia.Impl.Handler
                    Network.Salvia.Impl.Server

                    Network.Salvia.Handler.Banner
                    Network.Salvia.Handler.Body
                    Network.Salvia.Handler.CGI
                    Network.Salvia.Handler.Close
                    Network.Salvia.Handler.Cookie
                    Network.Salvia.Handler.Directory
                    Network.Salvia.Handler.Dispatching
                    Network.Salvia.Handler.Environment
                    Network.Salvia.Handler.Error
                    Network.Salvia.Handler.Extension
                    Network.Salvia.Handler.File
                    Network.Salvia.Handler.FileSystem
                    Network.Salvia.Handler.Head
                    Network.Salvia.Handler.Log
                    Network.Salvia.Handler.Login
                    Network.Salvia.Handler.Method
                    Network.Salvia.Handler.Parser
                    Network.Salvia.Handler.Path
                    Network.Salvia.Handler.Printer
                    Network.Salvia.Handler.Put
                    Network.Salvia.Handler.Redirect
                    Network.Salvia.Handler.Rewrite
                    Network.Salvia.Handler.Session
                    Network.Salvia.Handler.VirtualHosting

